--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@ h1 {
   gap: 0.5rem;
   flex-grow: 1;
   overflow-y: auto;
-  padding-right: 0.5rem;
+  padding: 0.5rem 0.5rem;
 }
 
 .list-item {
@@ -141,8 +141,11 @@ h1 {
 
 /* small screens */
 @media screen and (max-width: 700px) {
+  #root{
+    padding: 0;
+  }
   .container {
-    width: 100%;
+    border-radius: 0px;
   }
 }
 
